--- a/css/collaboration.css
+++ b/css/collaboration.css
@@ -1,1 +1,17 @@
+/* Collaboration */
+textarea {
+    width: 100%;
+    height: 200px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    padding: 1em;
+    font-size: 16px;
+    resize: none;
+}
+
+textarea:focus {
+    border-color: #5e5ecf;
+    outline: none;
+    box-shadow: 0 0 5px rgba(94, 94, 207, 0.5);
+}
 
