--- a/css/tools.css
+++ b/css/tools.css
@@ -1,1 +1,16 @@
+/* Quick Tools */
+button {
+    margin: 0.5em;
+    padding: 0.5em 1em;
+    background-color: #5e5ecf;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #7e7eff;
+}
 
